• Fixed some formatting problems on mobile screens for top section (submit email form was being cut-off, and SweetAlerts were pushed slightly too far down)

--- a/landlordlandingpage/assets/css/vegas.css
+++ b/landlordlandingpage/assets/css/vegas.css
@@ -13,28 +13,23 @@
     padding: 0;
     margin: 0;
 }
-
 .vegas-overlay {
     opacity: .25;
     background: rgba(7,33,46,.7) url(overlays/02.png) center center repeat;
 }
-
 .vegas-timer {
     top: auto;
     bottom: 0;
     height: 2px;
 }
-    .vegas-timer-progress {
-        width: 0%;
-        height: 100%;
-        background: white;
-        -webkit-transition: width ease-out;
-                transition: width ease-out;
-    }
-        .vegas-timer-running .vegas-timer-progress {
-            width: 100%;
-        }
-
+.vegas-timer-progress {
+    width: 0%;
+    height: 100%;
+    background: white;
+    -webkit-transition: width ease-out;
+            transition: width ease-out;
+}
+.vegas-timer-running .vegas-timer-progress { width: 100%; }
 .vegas-slide,
 .vegas-slide-inner {
     margin: 0;
@@ -43,37 +38,34 @@
     -webkit-transform: translateZ(0);
             transform: translateZ(0);
 }
-
 body .vegas-container {
     overflow: hidden !important;
     position: relative;
-}
-    
+} 
 .vegas-video {
     min-width: 100%; 
     min-height: 100%;
     width: auto; 
     height: auto;
 }
-
 body.vegas-container {
     overflow: auto;
     position: static;
     z-index: -2;
 }
-    body.vegas-container > .vegas-timer,
-    body.vegas-container > .vegas-overlay,
-    body.vegas-container > .vegas-slide {
-        position: fixed;
-        z-index: -1;
-    }
+body.vegas-container > .vegas-timer,
+body.vegas-container > .vegas-overlay,
+body.vegas-container > .vegas-slide {
+    position: fixed;
+    z-index: -1;
+}
 
-    /* Target Safari IOS7+ in order to add 76px */
-    _::full-page-media, _:future, 
-    :root body.vegas-container > .vegas-slide,
-    :root body.vegas-container > .vegas-overlay {
-        bottom: -76px;
-    }
+/* Target Safari IOS7+ in order to add 76px */
+_::full-page-media, _:future, 
+:root body.vegas-container > .vegas-slide,
+:root body.vegas-container > .vegas-overlay {
+    bottom: -76px;
+}
 
 /*************************
     Transitions
